mengubah tulisan mahasiswa pada hero header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <h1>Jefri Sitorus</h1>
             <img src="img/photo.JPG" alt="Picture">
-            <h2>Mahasiswa | Sistem Informasi</h2>
+            <h2>Manusia | Sistem Informasi</h2>
             <div class="social">
                 <a href="" class="btn facebook"><span class="fa fa-facebook"></span> Follow Facebook</a>
                 <a href="" class="btn instagram"><span class="fa fa-instagram"></span> Follow Instagram</a>
