--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="main">
         <div class="heading">
-            <h2>Galery</h2>
+            <h2>Gallery</h2>
         </div>
         <div id="line"></div>
         <div class="container">
